br-alignment-issue

--- a/resources/assets/css/global.css
+++ b/resources/assets/css/global.css
@@ -116,10 +116,10 @@
 .br-mainheading, .br-heading, .secondary-button, .secondary-button2 {
   font-family: "ProximaNova-Bold", "Helvetica", "Arial", sans-serif; }
 
-.accordian-tab label, .input-wrapper .radio-inline label, .br-info .bold, .primary-button, .shoe-button, .pdp-button, .tab-vertical .tab-header label h3 {
+.accordian-tab label, .input-wrapper .radio-inline label, .br-info .bold, .primary-button, .shoe-button, .pdp-button, .alert-msg h2, .tab-vertical .tab-header label h3 {
   font-family: "ProximaNova-Bold", "Helvetica", "Arial", sans-serif; }
 
-.accordian-tab label:after, .input-wrapper label, .input-wrapper .checklist-inline label, .input-wrapper .input-field, .input-wrapper .input-textarea, .input-wrapper .select-field, .br-info, html, body {
+.accordian-tab label:after, .input-wrapper label, .input-wrapper .checklist-inline label, .input-wrapper .input-field, .input-wrapper .input-textarea, .input-wrapper .select-field, .br-info, .alert-msg p, html, body {
   font-family: "ProximaNova-Regular", "Helvetica", "Arial", sans-serif; }
 
 .bold-font {
@@ -416,7 +416,8 @@
         border-radius: 100%;
         transition: all 1s ease; }
     .input-wrapper .radio-inline label .text {
-      padding-left: 30px; }
+      padding-left: 30px;
+      display: -ms-inline-grid; }
   .input-wrapper .radio-inline input:checked ~ label .mark {
     border: 1px solid #0263f7; }
     .input-wrapper .radio-inline input:checked ~ label .mark span {
@@ -455,7 +456,8 @@
         border-left: 2px solid #ffffff;
         border-bottom: 2px solid #ffffff; }
     .input-wrapper .checklist-inline label .text {
-      padding-left: 30px; }
+      padding-left: 30px;
+      display: -ms-inline-grid; }
   .input-wrapper .checklist-inline input:checked ~ label .mark {
     border: 1px solid #0263f7; }
     .input-wrapper .checklist-inline input:checked ~ label .mark span {
@@ -794,6 +796,21 @@ ul.br-info {
     .pdp-button {
       padding: 20px 15px;
       font-size: 15px; } }
+
+.alert-msg {
+  padding: 10px;
+  background-color: #f9d7da;
+  color: #6a2327;
+  margin-bottom: 15px;
+  border: 2px solid #eecdd2;
+  border-radius: 25px; }
+  .alert-msg a {
+    color: #6a2327; }
+  .alert-msg .center {
+    text-align: center; }
+    @media screen and (min-width: 1024px) {
+      .alert-msg .center {
+        margin-left: 25%; } }
 
 .error {
   color: #b9161e;
